[gd_scene load_steps=31 format=3 uid="uid://bej0l63525bre"]

[ext_resource type="Script" path="res://scripts/spider_boss.gd" id="1_n3cey"]
[ext_resource type="Resource" uid="uid://vy5hy6uhmwmm" path="res://resources/red.tres" id="2_vfsfx"]
[ext_resource type="Texture2D" uid="uid://hmwdq1lnoyvp" path="res://Assets/sprites/spider04.png" id="3_i07ic"]
[ext_resource type="Resource" uid="uid://b616pbd20r0bi" path="res://resources/spell_fire_resource.tres" id="3_jewr1"]
[ext_resource type="Material" uid="uid://b2sg6ojt8kw4f" path="res://Assets/sprites/hit_flash_mat.tres" id="3_mrq3i"]
[ext_resource type="PackedScene" uid="uid://3f5cxipw815" path="res://scenes/hit_box.tscn" id="4_h50t7"]
[ext_resource type="PackedScene" uid="uid://b0frrqjfje0wb" path="res://scenes/health_component.tscn" id="5_x6xsl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2gttd"]
atlas = ExtResource("3_i07ic")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2algf"]
atlas = ExtResource("3_i07ic")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf520"]
atlas = ExtResource("3_i07ic")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oi5d"]
atlas = ExtResource("3_i07ic")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gts2q"]
atlas = ExtResource("3_i07ic")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0pnx"]
atlas = ExtResource("3_i07ic")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_14rd6"]
atlas = ExtResource("3_i07ic")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w72oh"]
atlas = ExtResource("3_i07ic")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdh7l"]
atlas = ExtResource("3_i07ic")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gok2"]
atlas = ExtResource("3_i07ic")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn3y4"]
atlas = ExtResource("3_i07ic")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy3mv"]
atlas = ExtResource("3_i07ic")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eljjk"]
atlas = ExtResource("3_i07ic")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvrkq"]
atlas = ExtResource("3_i07ic")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttx2o"]
atlas = ExtResource("3_i07ic")
region = Rect2(0, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ccftg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gttd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2algf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf520")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oi5d")
}],
"loop": true,
"name": &"atack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gts2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0pnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14rd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w72oh")
}],
"loop": true,
"name": &"dead",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdh7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gok2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn3y4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy3mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eljjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvrkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttx2o")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_yw1ef"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"atack_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_1c07v"]
resource_name = "atack_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"atack_down", &"walk_down"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shootLogic"
}]
}

[sub_resource type="Animation" id="Animation_518k4"]
resource_name = "dead"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dead"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0apoj"]
_data = {
"RESET": SubResource("Animation_yw1ef"),
"atack_down": SubResource("Animation_1c07v"),
"dead": SubResource("Animation_518k4")
}

[sub_resource type="Animation" id="Animation_5lgjv"]
length = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_kvspn"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crmrw"]
_data = {
"RESET": SubResource("Animation_5lgjv"),
"hit_flash": SubResource("Animation_kvspn")
}

[node name="SpiderBoss" type="CharacterBody2D"]
script = ExtResource("1_n3cey")
stats = ExtResource("2_vfsfx")
spell_resource = ExtResource("3_jewr1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = ExtResource("3_mrq3i")
sprite_frames = SubResource("SpriteFrames_ccftg")
animation = &"atack_down"
autoplay = "walk_down"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0apoj")
}

[node name="Hit_box" parent="." groups=["enemy"] instance=ExtResource("4_h50t7")]

[node name="HealthComponent" parent="." instance=ExtResource("5_x6xsl")]

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_crmrw")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SpiderSuperAtack" type="Timer" parent="."]

[connection signal="on_health_changed" from="Hit_box" to="HealthComponent" method="_on_hit_box_on_health_changed"]
[connection signal="onDamageTaken" from="HealthComponent" to="." method="test"]
[connection signal="onDead" from="HealthComponent" to="." method="_on_health_component_on_dead"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SpiderSuperAtack" to="." method="_on_spider_super_atack_timeout"]

[editable path="Hit_box"]
